--- a/css/main.css
+++ b/css/main.css
@@ -2,3 +2,8 @@ body {
     margin: 60px auto;
     width: 70%;
 }
+
+h1 {
+    font-family: 'helvetica','san-serif','arial';
+    font-size: 5em; 
+}
