--- a/css/main.css
+++ b/css/main.css
@@ -5,5 +5,10 @@ body {
 
 h1 {
     font-family: 'helvetica','san-serif','arial';
-    font-size: 5em; 
+    font-size: 3em; 
+}
+
+p {
+    font-size: 1em;
+    font-family:'helvetica';
 }
