--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,11 @@ h1 {
 }
 
 p {
-    font-size: 1em;
+    font-size: 1.5em;
     font-family:'helvetica';
-    line-height: 5em;
+    line-height: 1.2em;
+}
+
+footer {
+    font-size: 1em;
 }
