--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ h1 {
 
 p {
     font-size: 1.5em;
-    font-family:'helvetica';
+    font-family:'helvetica', 'Arial', 'Sans-Serif';
     line-height: 1.2em;
 }
 
