--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,19 @@ h1 {
 
 p {
     font-size: 1.5em;
-    font-family:'helvetica', 'Arial', 'Sans-Serif';
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1.2em;
 }
 
 footer {
     border-top: 1px solid;
-    font-size: 1em;
+    border-color: #d5d5d5;
+    font-size: 0.6em;
+}
+
+nav ul, footer ul {
+    font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 0px;
+    list-style:none;
+    font-weight:bold;
 }
