--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ p {
     font-size: 1.5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1.2em;
+    color: #d5d5d5
 }
 
 footer {
