--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,8 @@ h1 {
 
 p {
     font-size: 1.5em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
     line-height: 1.2em;
-    color: #d5d5d5
+    color: #345
 }
 
 footer {
