--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,12 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 
+nav ul {
+    font-family:'Helvetica', 'Arial', 'Sans-Serif';
+    padding: 2px;
+    font-weight: bold;
+}
+
 ul.posts li {
     list-style: none;
 }
