--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,9 @@ ul.posts li {
 
 blockquote {
   background: #f9f9f9;
-  border-left: 10px solid #ccc
+  border-left: 10px solid #ccc;
+  font-size: 1em;
+  
 }
 
 blockquote p {
