--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,8 @@ blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
   font-size: 1em;
-  
+  margin: 1.5em 10px;
+  padding:0.5em 10px;
 }
 
 blockquote p {
