--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ blockquote {
   font-size: 1em;
   margin: 1.5em 10px;
   padding:0.5em 10px;
+    quotes:"201C""\201D""\2018""\2019";
 }
 
 blockquote p {
