--- a/css/main.css
+++ b/css/main.css
@@ -39,11 +39,14 @@ ul.posts li {
 blockquote {
   background: #f9f9f9;
   border-left: 10px solid #ccc;
-  font-size: 1em;
+  font-size: 0.6em;
   margin: 1.5em 10px;
   padding:0.5em 10px;
 }
 
+blockquote
+
 blockquote p {
     display:inline;
+    
 }
