--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ h1 {
     font-size: 3em; 
 }
 
+img-center {
+  display: block;
+  margin: 0 auto;
+}
+
 p {
     font-size: 1.5em;
     line-height: 1.2em;
