--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,15 @@ footer {
     font-size: 0.6em;
 }
 
+a {
+    text-decoration: none;
+    color: #999;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
